--- a/.github/workflows/collection-ci.yml
+++ b/.github/workflows/collection-ci.yml
@@ -6,9 +6,41 @@ on:
       - main
 jobs:
   Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
     steps:
-      - uses: actions/checkout@master
-        with:
-          collection: assignmentcollection.json
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+    - uses: actions/checkout@v2
+
+      # INstall Node on the runner
+    - name: Install Node
+      uses: actions/setup-node@v1
+      with:
+          node-version: "12.x"
+
+
+      # Install the newman command line utility and also install the html extra reporter
+    - name: Install newman
+      run: |
+          npm install -g newman
+          npm install -g newman-reporter-htmlextra
+
+
+      # Make directory to upload the test results
+    - name: Make Directory for results
+      run: mkdir -p testResults
+
+
+      # Run the POSTMAN collection
+    - name: Run POSTMAN collection
+      run: |
+          newman run assignmentcollection.json -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
+
+
+      # Upload the contents of Test Results directory to workspace
+    - name: Output the run Details
+      uses: actions/upload-artifact@v2
+      with:
+        name: RunReports
+        path: testResults
+
+
+    - run: echo "🍏 This job's status is ${{ job.status }}."
